--- a/.github/workflows/sermons.yml
+++ b/.github/workflows/sermons.yml
@@ -17,16 +17,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v5
-        with:
-          enable-cache: true
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
           python-version-file: "scripts/pyproject.toml"
-      - name: Run Script
+      - name: Run script to fetch sermons
         env:
           SERMONAUDIO_API_KEY: ${{ secrets.SERMONAUDIO_API_KEY }}
         run: |
           cd scripts
-          uv pip install
           uv run sermonaudio_fetch.py --data-dir "${{ github.workspace }}/src/data"
