--- a/.github/workflows/sermons.yml
+++ b/.github/workflows/sermons.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT_GITHUB_TOKEN }}
+          ref: ${{ github.event.pull_request.head.ref }}
       - name: Install uv
         uses: astral-sh/setup-uv@v5
       - name: "Set up Python"
@@ -27,3 +30,7 @@ jobs:
         run: |
           cd scripts
           uv run sermonaudio_fetch.py --data-dir "${{ github.workspace }}/src/data"
+      - name: Commit and push changes to repo
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
