--- a/.github/workflows/sermons.yml
+++ b/.github/workflows/sermons.yml
@@ -1,6 +1,10 @@
 name: Fetch Latest Sermons
 
 on:
+  # Re-run every 4 hours
+  schedule:
+    - cron: "0 */4 * * *"
+    
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
