--- a/package.json
+++ b/package.json
@@ -22,36 +22,46 @@
     "fix:prettier": "prettier -w ."
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.1.1",
-    "astro": "^5.1.7",
+    "@schedule-x/calendar": "^2.15.1",
+    "@schedule-x/current-time": "^2.16.0",
+    "@schedule-x/event-modal": "^2.15.1",
+    "@schedule-x/events-service": "^2.15.1",
+    "@schedule-x/react": "^2.15.1",
+    "@schedule-x/theme-default": "^2.15.1",
+    "astro": "^5.1.10",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "install": "^0.13.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "unpic": "^3.22.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.0.6",
+    "@astrojs/mdx": "^4.0.7",
     "@astrojs/partytown": "^2.1.3",
-    "@astrojs/tailwind": "^5.1.4",
-    "@eslint/js": "^9.18.0",
+    "@astrojs/tailwind": "^5.1.5",
+    "@eslint/js": "^9.19.0",
     "@iconify-json/flat-color-icons": "^1.2.1",
-    "@iconify-json/tabler": "^1.2.14",
+    "@iconify-json/tabler": "^1.2.15",
     "@tailwindcss/typography": "^0.5.16",
     "@types/eslint__js": "^8.42.3",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
     "@types/mdx": "^2.0.13",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "astro-compress": "2.3.5",
-    "astro-eslint-parser": "^1.1.0",
-    "eslint": "^9.18.0",
+    "astro-eslint-parser": "^1.2.1",
+    "eslint": "^9.19.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^15.14.0",
     "js-yaml": "^4.1.0",
@@ -63,8 +73,11 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
+    "typescript-eslint": "^8.22.0",
     "unist-util-visit": "^5.0.0"
+  },
+  "pnpm": {
+    "overrides": {}
   },
   "packageManager": "pnpm@9.15.4"
 }
