--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "install": "^0.13.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "unpic": "^3.22.0"
