--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "unpic": "^3.22.0"
