--- a/package.json
+++ b/package.json
@@ -28,18 +28,25 @@
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.1.1",
+    "@mantine/core": "^7.16.2",
+    "@mantine/dates": "^7.16.2",
+    "@mantine/hooks": "^7.16.2",
     "@schedule-x/calendar": "^2.15.1",
     "@schedule-x/current-time": "^2.16.0",
     "@schedule-x/event-modal": "^2.15.1",
     "@schedule-x/events-service": "^2.15.1",
     "@schedule-x/react": "^2.15.1",
     "@schedule-x/theme-default": "^2.15.1",
+    "@tabler/icons-react": "^3.29.0",
     "astro": "^5.1.10",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "mantine-react-table": "2.0.0-beta.8",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
