--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -21,12 +21,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT_GITHUB_TOKEN }}
-          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
-      - name: "Set up Python"
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version-file: "scripts/pyproject.toml"
@@ -38,7 +37,7 @@ jobs:
 
         run: |
           cd scripts
-          uv run planningcenter_fetch.py --data-dir "${{ github.workspace }}/src/data"
+          uv run planningcenter_fetch_events.py --data-dir "${{ github.workspace }}/src/data"
           
       - name: Commit and push changes to repo
         uses: EndBug/add-and-commit@v9
