--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,17 @@ root = true
 
 [*]
 charset = utf-8
+
+[*.{js,ts,astro}]
 end_of_line = lf
 indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = false
+
+[*.{py}]
+end_of_line = lf
+indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = false
