fix: handle time zones better using luxon for upcoming events

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "install": "^0.13.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "luxon": "^3.5.0",
     "mantine-react-table": "2.0.0-beta.9",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
@@ -64,6 +65,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
+    "@types/luxon": "^3.4.2",
     "@types/mdx": "^2.0.13",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
