--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
     "fix:prettier": "prettier -w ."
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.0",
+    "@astrojs/react": "^4.2.1",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "1.0.0-beta.8",
-    "@fontsource-variable/inter": "^5.1.1",
-    "@mantine/core": "^7.16.2",
-    "@mantine/dates": "^7.16.2",
-    "@mantine/hooks": "^7.16.2",
-    "@schedule-x/calendar": "^2.15.1",
-    "@schedule-x/current-time": "^2.16.0",
-    "@schedule-x/event-modal": "^2.15.1",
-    "@schedule-x/events-service": "^2.15.1",
-    "@schedule-x/react": "^2.15.1",
-    "@schedule-x/theme-default": "^2.15.1",
-    "@tabler/icons-react": "^3.29.0",
-    "astro": "^5.1.10",
+    "@fontsource-variable/inter": "^5.2.5",
+    "@mantine/core": "^7.17.2",
+    "@mantine/dates": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
+    "@schedule-x/calendar": "^2.22.0",
+    "@schedule-x/current-time": "^2.22.0",
+    "@schedule-x/event-modal": "^2.22.0",
+    "@schedule-x/events-service": "^2.22.0",
+    "@schedule-x/react": "^2.22.0",
+    "@schedule-x/theme-default": "^2.22.0",
+    "@tabler/icons-react": "^3.31.0",
+    "astro": "^5.5.2",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
@@ -52,38 +52,40 @@
     "moment-timezone": "^0.5.47",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "unpic": "^4.0.0"
+    "unpic": "^4.1.2"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.0.7",
-    "@astrojs/partytown": "^2.1.3",
+    "@astrojs/markdown-remark": "^6.3.0",
+    "@astrojs/mdx": "^4.2.0",
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/tailwind": "^6.0.0",
-    "@eslint/js": "^9.21.0",
+    "@eslint/js": "^9.22.0",
     "@iconify-json/flat-color-icons": "^1.2.1",
-    "@iconify-json/tabler": "^1.2.15",
+    "@iconify-json/tabler": "^1.2.17",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
     "@types/luxon": "^3.4.2",
     "@types/mdx": "^2.0.13",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "astro-compress": "2.3.6",
     "astro-eslint-parser": "^1.2.1",
-    "eslint": "^9.19.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.0.0",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "reading-time": "^1.5.0",
     "sharp": "0.33.5",
-    "tailwind-merge": "^3.0.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
     "unist-util-visit": "^5.0.0"
   },
   "pnpm": {
