--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@schedule-x/react": "^2.22.0",
     "@schedule-x/theme-default": "^2.22.0",
     "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.5.2",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
@@ -60,7 +61,6 @@
     "@astrojs/markdown-remark": "^6.3.0",
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/tailwind": "^6.0.0",
     "@eslint/js": "^9.22.0",
     "@iconify-json/flat-color-icons": "^1.2.1",
     "@iconify-json/tabler": "^1.2.17",
@@ -95,6 +95,7 @@
       "sharp"
     ],
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp"
     ]
